# fina-contract

./: README.md
contract/snip20-reference-impl/: README.md
contract/time-lock/: Cargo.toml  README.md
contract/time-lock/.cargo/: config
contract/time-lock/src/: contract.rs  error.rs  msg.rs  state.rs
